--- a/src/404.html
+++ b/src/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
     
 <head>
-    <base href="/angular-page-test">
+    <base href="/angular-page-test/">
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="./assets/resources/favicon.png">
     <link rel="stylesheet" href="styles.css">
@@ -13,7 +13,7 @@
     <div class="page col-md-12">
         <img src="genshin-mats/assets/404.png">
         <h1>Oops, it looks like there's nothing here.</h1>
-        <h2>If you believe you followed a legitimate link, it may be a bug with GitHub pages. Follow this <a href="/angular-page-test">link</a> to go to the home page.</h2>
+        <h2>If you believe you followed a legitimate link, it may be a bug with GitHub pages. Follow this <a href="/angular-page-test/">link</a> to go to the home page.</h2>
     </div>
 </body>
 
