--- a/src/404.html
+++ b/src/404.html
@@ -10,10 +10,14 @@
 </head>
     
 <body class="dark">
-    <div class="page col-md-12">
+    <div class="page col-md-12 full-height">
+        <div class="dead-center">
         <img src="./assets/resources/404.png">
-        <h1>Oops, it looks like there's nothing here.</h1>
-        <h2>If you believe you followed a legitimate link, it may be a bug with GitHub pages. Follow this <a href="/angular-page-test/">link</a> to go to the home page.</h2>
+            <h1>Oops, it looks like there's nothing here.</h1>
+            <h3>
+                If you believe you followed a legitimate link, it may be a bug with GitHub pages. Follow this <a href="/angular-page-test/">link</a> to go to the home page.
+            </h3>
+        </div>
     </div>
 </body>
 
